test/cgip/PP/error/inheritance/rep/reperr-24.javaerr20
rep-24.arg, l. 45, c. 16:
  Error : c is multiple defined in super classes
